# ChessGame

./: Bishop.cpp  Bishop.hpp  Board.cpp  Board.hpp  BoardGame.cpp  BoardGame.hpp  BoardWindow.cpp  BoardWindow.hpp  CMakeLists.txt  ChessGame.pro  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Piece.cpp  Piece.hpp  ProjetTestQt.sln  ProjetTestQt.vcxproj  ProjetTestQt.vcxproj.filters  TestChessGame.cpp  boardwindow.ui  gameSimulation1.txt  gameSimulation2.txt  gameSimulation3.txt  main.cpp  welcomewindow.cpp  welcomewindow.hpp  welcomewindow.ui
x64/Debug/: ProjetTestQt.exe.recipe  ProjetTestQt.exp  ProjetTestQt.vcxproj.FileListAbsolute.txt  TestChessGame.lib
x64/Debug/ProjetTestQt.tlog/: CL.command.1.tlog  CL.read.1 2.tlog  CL.write.1 2.tlog  ProjetTestQt.lastbuildstate  ProjetTestQt.write.1u 2.tlog  link.command.1.tlog  link.read.1 2.tlog  link.write.1.tlog  moc.read.1u 2.tlog  moc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Debug/moc/: moc_Board 2.cpp  moc_BoardWindow 2.cpp  moc_welcomewindow.cpp
x64/Debug/qmake/temp/: .qmake 2.stash  Makefile 2  qtvars_x64_Debug 2.props
x64/Debug/uic/: ui_boardwindow 2.h  ui_welcomewindow 2.h
x64/Release/ProjetTestQt.tlog/: ProjetTestQt.write.1u.tlog  moc.read.1u.tlog  moc.write.1u.tlog  uic.read.1u 2.tlog  uic.write.1u.tlog
x64/Release/moc/: moc_BoardScene 2.cpp  moc_ChessGame 2.cpp  moc_ChessGameWindow.cpp  moc_addpiecewindow.cpp
x64/Release/qmake/temp/: .qmake.stash  31090C5F-C8B6-4AB4-8938-BA52842F8EB8.ProjetTestQt.designtime.idx  Makefile 2  qtvars_x64_Release.props
x64/Release/uic/: ui_addpiecewindow 2.h  ui_boardwindow 2.h  ui_welcomewindow.h
